--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.19.1",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "moment": "^2.24.0",
     "primeicons": "^2.0.0",
     "primereact": "^3.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-transition-group": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
